--- a/Va-cay/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Va-cay/Views/Storyboards/Base.lproj/Main.storyboard
@@ -166,8 +166,8 @@
                                     </textField>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Pm-AV-t5d" customClass="SecondaryButton" customModule="Va_cay" customModuleProvider="target">
-                                <rect key="frame" x="147" y="767" width="120" height="64"/>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Pm-AV-t5d" customClass="SecondaryButton" customModule="Va_cay" customModuleProvider="target">
+                                <rect key="frame" x="139.5" y="750" width="135" height="64"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="64" id="4T2-lo-D2U"/>
                                     <constraint firstAttribute="width" constant="135" id="pCU-Fm-I4B"/>
@@ -235,7 +235,7 @@
                                     <action selector="exitModalButtonTapped:" destination="35b-ar-bwY" eventType="touchUpInside" id="Ay4-tt-dlx"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="RkB-ET-Tgq">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="RkB-ET-Tgq">
                                 <rect key="frame" x="83" y="235.5" width="248" height="337"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
@@ -860,7 +860,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="XAh-it-9oj">
-                                <rect key="frame" x="0.0" y="112" width="414" height="197"/>
+                                <rect key="frame" x="0.0" y="104" width="414" height="197"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="8kq-oK-XG2">
                                         <rect key="frame" x="92" y="0.0" width="230.5" height="59.5"/>
@@ -953,10 +953,10 @@
                                             </label>
                                         </subviews>
                                     </stackView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hfw-FK-YcH">
-                                        <rect key="frame" x="157" y="167" width="100" height="30"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hfw-FK-YcH" customClass="SecondaryButton" customModule="Va_cay" customModuleProvider="target">
+                                        <rect key="frame" x="162" y="167" width="90" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="100" id="LBF-w1-4Lo"/>
+                                            <constraint firstAttribute="width" constant="90" id="LBF-w1-4Lo"/>
                                             <constraint firstAttribute="height" constant="30" id="jst-VA-mbr"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
@@ -968,7 +968,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fAB-Df-Vfn">
-                                <rect key="frame" x="100" y="784" width="214" height="54"/>
+                                <rect key="frame" x="50" y="784" width="314" height="54"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="35"/>
                                 <state key="normal" title="Edit Itinerary">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -991,17 +991,17 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="oDe-Qa-A4k">
                                                     <rect key="frame" x="20.5" y="12.5" width="373" height="59"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="X2m-TV-cbK">
-                                                            <rect key="frame" x="0.0" y="0.0" width="30" height="59"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="X2m-TV-cbK">
+                                                            <rect key="frame" x="0.0" y="0.0" width="112" height="59"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(dayLabel)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eM3-2b-PWm">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="30" height="29.5"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(dayLabel)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eM3-2b-PWm">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="112" height="29"/>
                                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ei5-DG-d7A" customClass="MapPinButton" customModule="Va_cay" customModuleProvider="target">
-                                                                    <rect key="frame" x="0.0" y="29.5" width="30" height="29.5"/>
+                                                                    <rect key="frame" x="41" y="29" width="30" height="30"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="30" id="Fy5-f2-iya"/>
                                                                         <constraint firstAttribute="width" constant="30" id="NZi-NQ-uIO"/>
@@ -1014,12 +1014,15 @@
                                                                     </connections>
                                                                 </button>
                                                             </subviews>
+                                                            <constraints>
+                                                                <constraint firstItem="eM3-2b-PWm" firstAttribute="width" secondItem="X2m-TV-cbK" secondAttribute="width" id="JQc-QS-k2M"/>
+                                                            </constraints>
                                                         </stackView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Kyb-re-5M3">
-                                                            <rect key="frame" x="30" y="0.0" width="343" height="59"/>
+                                                            <rect key="frame" x="112" y="0.0" width="261" height="59"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(activitiesLabel)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LGI-Jj-68W">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="343" height="59"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="261" height="59"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -1027,6 +1030,9 @@
                                                             </subviews>
                                                         </stackView>
                                                     </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="X2m-TV-cbK" firstAttribute="width" secondItem="oDe-Qa-A4k" secondAttribute="width" multiplier="0.3" id="mW8-7Q-UjX"/>
+                                                    </constraints>
                                                 </stackView>
                                             </subviews>
                                             <constraints>
@@ -1049,18 +1055,19 @@
                         <constraints>
                             <constraint firstItem="Kt4-rp-uxJ" firstAttribute="bottom" secondItem="fAB-Df-Vfn" secondAttribute="bottom" constant="24" id="6xa-zg-K9S"/>
                             <constraint firstItem="fAB-Df-Vfn" firstAttribute="top" secondItem="YaW-RH-2kG" secondAttribute="bottom" constant="20" id="9hS-8J-BVY"/>
-                            <constraint firstItem="XAh-it-9oj" firstAttribute="top" secondItem="Kt4-rp-uxJ" secondAttribute="top" constant="24" id="FgH-dn-iEQ"/>
-                            <constraint firstItem="fAB-Df-Vfn" firstAttribute="leading" secondItem="Kt4-rp-uxJ" secondAttribute="leading" constant="100" id="Opj-31-lub"/>
+                            <constraint firstItem="fAB-Df-Vfn" firstAttribute="leading" secondItem="Kt4-rp-uxJ" secondAttribute="leading" constant="50" id="Opj-31-lub"/>
                             <constraint firstItem="Kt4-rp-uxJ" firstAttribute="trailing" secondItem="YaW-RH-2kG" secondAttribute="trailing" id="Pnd-NU-hZB"/>
                             <constraint firstItem="XAh-it-9oj" firstAttribute="width" secondItem="gwW-3s-kJT" secondAttribute="width" id="VP0-tr-NQt"/>
-                            <constraint firstItem="Kt4-rp-uxJ" firstAttribute="trailing" secondItem="fAB-Df-Vfn" secondAttribute="trailing" constant="100" id="YCJ-BW-cUz"/>
+                            <constraint firstItem="Kt4-rp-uxJ" firstAttribute="trailing" secondItem="fAB-Df-Vfn" secondAttribute="trailing" constant="50" id="YCJ-BW-cUz"/>
+                            <constraint firstItem="XAh-it-9oj" firstAttribute="top" secondItem="Kt4-rp-uxJ" secondAttribute="top" constant="16" id="cPK-At-6j7"/>
                             <constraint firstItem="XAh-it-9oj" firstAttribute="centerX" secondItem="Kt4-rp-uxJ" secondAttribute="centerX" id="dgT-aL-8kB"/>
-                            <constraint firstItem="YaW-RH-2kG" firstAttribute="top" secondItem="XAh-it-9oj" secondAttribute="bottom" id="jdm-cU-2eS"/>
+                            <constraint firstItem="YaW-RH-2kG" firstAttribute="top" secondItem="XAh-it-9oj" secondAttribute="bottom" constant="8" id="jdm-cU-2eS"/>
                             <constraint firstItem="YaW-RH-2kG" firstAttribute="leading" secondItem="Kt4-rp-uxJ" secondAttribute="leading" id="kw3-sC-W4M"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="LnR-ov-vHB"/>
                     <connections>
+                        <outlet property="checklistButton" destination="Hfw-FK-YcH" id="YGX-Jv-Ag1"/>
                         <outlet property="flightArrivalLabel" destination="BdX-OO-MHX" id="5DE-Dq-8K1"/>
                         <outlet property="flightDepartureLabel" destination="MKZ-6B-wiI" id="OK0-JH-VYo"/>
                         <outlet property="hotelAirbnbLabel" destination="2XT-XI-blc" id="Vl2-FV-vNV"/>
